--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="index.js"></script>
 </head>
 <body>
-	<h1>Assignment 3 Test</h1>
+	<h1>Assignment 3 new</h1>
 	<section class="template-hook">
 		Fill this section with the templated components
 	</section>
