--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script type="text/javascript">
 
-        const data =  [
-            {
+$(function(){
+
+const data = [ 
+{
             "name": "Steve Smith",
             "jobTitle": "Project Manage",
             "Company": "Front End Dev Co",
@@ -49,32 +51,23 @@
             "Email": "mJordan@bulls.com",
             "LinkedInUrl": "mJordan.linkedinprofile.com"
             }
-            ];
+];
 
-            function cardModule(card) {
-                return `
-                <div class="right-side">         
-                    <p>Company: ${data.Company}</p>
-                    <p>Experience: ${data.Experience}</p>
-                    <p>School: ${data.school}</p>
-                    <p>Major: ${data.Major}</p>
-                    <p>Email: ${data.Email}</p>
-                
-                </div> 
-                `
-            }
+let dataHTML = data.map(function(x) {
+	return data = <article class="right-side"><ul><li class="data-name">${data.name}</li></ul></article>
+});
 
-            document.getElementById("template-hook").innerHTML = `
-            <h1 class="main"> X</h1>
-            ${data.map(cardModule).join('')}
-`
+$(".template-hook").append(dataHTML);
+});
+
+
         </script>
     </head>
     <body>
     <!-- ASSIGNMENT 3 -->
         <main class="main">
-            <h1>Assignment 3 - class03 - JSON</h1>
-            <div id="template-hook">
+            <h1>Assignment 3 - JSON</h1>
+            <div class="template-hook">
             </div>
 
 <!-- CLASS02 ASSIGMENT02 -->
