--- a/index.html
+++ b/index.html
@@ -8,57 +8,80 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script type="text/javascript">
 
-$(function(){
 
-const data = [ 
-{
-            "name": "Steve Smith",
-            "jobTitle": "Project Manage",
-            "Company": "Front End Dev Co",
-            "Experience": "3 years",
-            "School": "UW",
-            "Major": "Marketing",
-            "Email": "steve@fedc.com",
-            "LinkedInUrl": "steve.linkedinprofile.com"
-            }, 
-            {
-            "name": "Aaron Katz",
-            "jobTitle": "Full Stack Developer",
-            "Company": "Web Sites and More",
-            "Experience": "5 years",
-            "School": "SU",
-            "Major": "Computer Science",
-            "Email": "aaronNotMyEmail@uw.com",
-            "LinkedInUrl": "aaron.linkedinprofile.com"
-            }, 
-            {
-            "name": "Kyle Hendricks",
-            "jobTitle": "Starting Pitcher",
-            "Company": "Chicago Cubs",
-            "Experience": "12 years",
-            "School": "USC",
-            "Major": "Pitching",
-            "Email": "kyleH@cubs.com",
-            "LinkedInUrl": "kyle.linkedinprofile.com"
-            },
-            {
-            "name": "Michael Jordan",
-            "jobTitle": "Point Guard",
-            "Company": "Chicago Buls",
-            "Experience": "20 years",
-            "School": "UNC",
-            "Major": "Trash Talking",
-            "Email": "mJordan@bulls.com",
-            "LinkedInUrl": "mJordan.linkedinprofile.com"
-            }
-];
+$(document).ready(function () {
 
-let dataHTML = data.map(function(x) {
-	return data = <article class="right-side"><ul><li class="data-name">${data.name}</li></ul></article>
+var data = [ 
+    {
+    "picture": "src=img/unsplash-headshot.jpg",
+    "name": "Steve Smith",
+    "jobTitle": "Project Manage",
+    "Company": "Front End Dev Co",
+    "Experience": "3 years",
+    "School": "UW",
+    "Major": "Marketing",
+    "Email": "steve@fedc.com",
+    "LinkedInUrl": "steve.linkedinprofile.com"
+    }, 
+    {
+    "picture": "src=img/unsplash-headshot.jpg",
+    "name": "Aaron Katz",
+    "jobTitle": "Full Stack Developer",
+    "Company": "Web Sites and More",
+    "Experience": "5 years",
+    "School": "SU",
+    "Major": "Computer Science",
+    "Email": "aaronNotMyEmail@uw.com",
+    "LinkedInUrl": "aaron.linkedinprofile.com"
+    }, 
+    {
+    "picture": "src=img/unsplash-headshot.jpg",
+    "name": "Kyle Hendricks",
+    "jobTitle": "Starting Pitcher",
+    "Company": "Chicago Cubs",
+    "Experience": "12 years",
+    "School": "USC",
+    "Major": "Pitching",
+    "Email": "kyleH@cubs.com",
+    "LinkedInUrl": "kyle.linkedinprofile.com"
+    },
+    {
+        "picture": "src=img/unsplash-headshot.jpg",
+    "name": "Michael Jordan",
+    "jobTitle": "Point Guard",
+    "Company": "Chicago Buls",
+    "Experience": "20 years",
+    "School": "UNC",
+    "Major": "Trash Talking",
+    "Email": "mJordan@bulls.com",
+    "LinkedInUrl": "mJordan.linkedinprofile.com"
+    }
+    ];
+
+
+
+// $('.hook').html(data[1].name);
+let dataHTML = data.map(function(data) {
+ return data = `
+
+    <div class="right-side">
+        <img class="profile-img" ${data.picture}>
+        <li class="data-name">Name: ${data.name}</li>
+        <li class="data-jobTitle">Job Title: ${data.jobTitle}</li>
+        <li class="data-jobTitle">Company: ${data.company}</li>
+        <li class="data-name">School: ${data.school}</li>
+        <li class="data-name">Experience: ${data.experience}</li>
+        <li class="data-jobTitle">School: ${data.school}</li>
+        <li class="data-name">Major: ${data.major}</li>
+        <li class="data-jobTitle">Email: ${data.email}</li>
+        <li class="data-email">LinkedIn: ${data.LinkedInUrl}</li></div>
+    `
 });
 
-$(".template-hook").append(dataHTML);
+$(".hook").append(dataHTML);
+
 });
+
 
 
         </script>
@@ -66,24 +89,9 @@ $(".template-hook").append(dataHTML);
     <body>
     <!-- ASSIGNMENT 3 -->
         <main class="main">
-            <h1>Assignment 3 - JSON</h1>
-            <div class="template-hook">
+            <h1>Assignment 3</h1>
+            <div class="hook">
             </div>
-
-<!-- CLASS02 ASSIGMENT02 -->
-            <!-- <img class="profile-img" src=img/unsplash-headshot.jpg alt="profile picture">
-            <div class=name-title-bottom>
-                <h2>Steve Smith</h2>
-                <h4>Project Manager</h4>    
-            </div>    
-            <div class="right-side">         
-                <p>Company: FE Dev Co</p>
-                <p>Experience: 3 years</p>
-                <p>School: UW</p>
-                <p>Major: Marketing</p>
-                <p>Email: steve@fedc.com</p>
-                <p>steve.linkedinprofile.com</p>
-            </div>    -->
 
         </main>
     </body>
