added background color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 "LinkedInUrl": "steve.linkedinprofile.com"
                 }, 
                 {
-                "picture": "src=img/unsplash-headshot.jpg",
+                "picture": "src=img/pic1.jpg",
                 "name": "Aaron Katz",
                 "jobTitle": "Full Stack Developer",
                 "Company": "Web Sites and More",
@@ -47,7 +47,7 @@
                 "LinkedInUrl": "kyle.linkedinprofile.com"
                 },
                 {
-                "picture": "src=img/unsplash-headshot.jpg",
+                "picture": "src=img/pic1.jpg",
                 "name": "Michael Jordan",
                 "jobTitle": "Point Guard",
                 "Company": "Chicago Buls",
@@ -95,7 +95,7 @@
     </head>
     <body>
         <main class="main">
-            <h1>Assignment 3 - JSON</h1>
+            <h1>Assignment-03 - JSON</h1>
             <div class="hook">
             </div>
         </main>
